Did another major leg towards making the walking npc behavior coherent and modal.  Pottering now works again.

--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -19,8 +19,11 @@ properties: {
 #-------------------------- constructor/destructor logic --------------------------#
 	visual_obj_constructor: "commands :: [
 										if(shadow_size != null, spawn_shadow( (string <- shadow_size) )),
-										if(start_mode, animation(start_mode), start_standing)
+										if(start_mode, animation(start_mode), start_standing),
+										epi_standing_npc_constructor,
 									]",
+
+	epi_standing_npc_constructor: "commands :: null",
 
 #--------------------------	 editor items --------------------------#
 	start_mode: { type: "string", default: "stand", persistent: false, set: "set(_data, value) asserting _data = null | 'Attempted to set a property we want to be immutable'" },
@@ -32,14 +35,23 @@ properties: {
 	shadow_size: "string|null :: 'medium_small'",
 
 
-#-------------------------- core functionality --------------------------#
+#-------------------------- animation sets --------------------------#
+	/*
+		At least for `standing_animations` and `walking_animations`, these are meant to be overloaded by individual inheritors.
+
+		These are intended to let us check if we should skip interrupting the animation if it's already in progress; `core_anims` is a fallback to let us just repeat any 'weird' or custom animation automatically, and walking animations allows us to do a little introspection to determine if we are actively in a walking anim (note that this is independent from a mode - we may be in a turning animation, but consider ourselves mechanistically in 'walking mode', and intend to resume walking as soon as whatever other animation completes).
+	*/	core_anims: "[string] :: ['stand','turn']",
 	standing_animations: "[string] :: ['stand']", //a list of walking animations - inheritors may supply more than this
 
-	start_standing: "commands :: start_standing__standing_npc_behavior",
-	start_standing__standing_npc_behavior: 
-		"commands :: if(animation not in ['turn'] or time_in_animation >= animation_obj.total_animation_time,
-			do_stand_or_turn_behavior
-		)",
+
+
+#-------------------------- cutscene commands --------------------------#
+	do_pause: "commands :: [change_to_stand_anim, set(_paused,true)]",
+	do_resume: "commands :: [fire_event('resume'), set(_paused,false)]",
+
+#-------------------------- core functionality --------------------------#
+	start_standing: "commands :: null",  //we are always in standing mode
+
 
 	do_stand_or_turn_behavior: "if(should_turn,
 		turn_around,
@@ -48,9 +60,11 @@ properties: {
 	
 	change_to_stand_anim: "if(animation in standing_animations, set(animation,animation), animation('stand'))",
 	
-	do_pause: "commands :: [change_to_stand_anim, set(_paused,true)]",
-	do_resume: "commands :: [fire_event('resume'), set(_paused,false)]",
 
+
+
+
+	end_anim_decisions: "commands :: do_stand_or_turn_behavior",
 
 
 #-------------------------- turning criterion --------------------------#
@@ -72,11 +86,7 @@ properties: {
 
 
 
-		//a formula that can be used to draw the character's attention to an object, and make them do whatever in response to it.
-	consider_object: {type: "string", default: "null" },
 
-	do_regular_behavior: "commands :: start_standing",
-	core_anims: "[string] :: ['stand','turn']",
 	
 	
 #-------------------------- conversation functionality --------------------------#
@@ -107,14 +117,26 @@ properties: {
 
 
 #-------------------------- storage --------------------------#
+		//a formula that can be used to draw the character's attention to an object, and make them do whatever in response to it.
+	consider_object: {type: "string", default: "null" },
+
+
 	_paused: { type: "bool", default: false},	
 	_last_turned: { type: "int", default: -100, persistent: false },
 	_last_interacted: { type: "int", default: -100, persistent: false },
 },
 
 
-on_end_anim: "if(not animation in core_anims, animation(animation),   if(_paused, start_standing,do_regular_behavior))",
 			/*if we're doing some special animation, like the butler-kitty, we're expected to self-handle termination*/
+on_end_anim: "if(not animation in core_anims,
+	animation(animation),
+	if(_paused,
+		start_standing,
+		//if(animation not in ['turn'] and time_in_animation >= animation_obj.total_animation_time,
+			end_anim_decisions
+		//)
+	)
+)",
 	
 
 on_interact: "
