--- a/data/object_prototypes/general/walking_npc.cfg
+++ b/data/object_prototypes/general/walking_npc.cfg
@@ -15,6 +15,20 @@ editor_info: {
 },
 
 properties: {
+#-------------------------- constructor/destructor logic --------------------------#
+	epi_standing_npc_constructor: "commands :: [
+		if(start_mode = 'stand',
+			set(_is_walking, false),
+			set(_is_walking, true)
+		)
+		;
+		initialize_regular_behavior,
+		fire_event('enter_level'),
+	] asserting max_x > min_x",
+
+
+
+
 #-------------------------- editor items --------------------------#
 		min_x: { type: "int", init: "mid_x - 100", editor_info: { type: "x", value: "midpoint_x - 200", } },
 		max_x: { type: "int", init: "mid_x + 100", editor_info: { type: "x", value: "midpoint_x + 200", } },
@@ -32,15 +46,15 @@ properties: {
 
 		_is_walking: { type: "bool", default: true },
 
-#-------------------------- behavior --------------------------#
+#-------------------------- cutscene commands --------------------------#
 	begin_pacing: "[
-			set(start_mode,'walk'),
+			set(_is_walking, true),
 			set(_target, null),
 			set(_turns, true)
 		]",
 		
 	begin_walking: "[
-			set(start_mode,'walk'),
+			set(_is_walking, true),
 			set(_target, null),
 			set(_turns, false)
 		]",
@@ -58,78 +72,134 @@ properties: {
 	walk_to: "def(int target_x, null|function()->commands callback=null) -> commands execute(me, [
 			set(_target, target_x),
 			if(callback != null, set(_target_callback, callback)),
-			set(start_mode, 'walk')
+			set(_is_walking, true)
 		])",
 
+
+#-------------------------- animation sets --------------------------#
+	/*
+		At least for `standing_animations` and `walking_animations`, these are meant to be overloaded by individual inheritors.
+
+		These are intended to let us check if we should skip interrupting the animation if it's already in progress; `core_anims` is a fallback to let us just repeat any 'weird' or custom animation automatically, and walking animations allows us to do a little introspection to determine if we are actively in a walking anim (note that this is independent from a mode - we may be in a turning animation, but consider ourselves mechanistically in 'walking mode', and intend to resume walking as soon as whatever other animation completes).
+	*/
+	core_anims: "[string] :: ['stand','turn','walk']",
+	walking_animations: "[string] :: ['walk']", 
+	
+	check_for_special_walk_anim: "if(animation in walking_animations and animation != 'walk', set(_current_special_walk_anim, animation), set(_current_special_walk_anim, ''))",
+
+
+
+#-------------------------- core behavior --------------------------#
+	initialize_regular_behavior: "if(start_mode = 'stand', start_standing, start_walking)",
+
+
+
+	core_processing: "commands :: [
+		if(self.is_at_target,
+			fire_event(self,'reach_target') 
+		),	
+
+		if(animation in walking_animations,
+			check_for_special_walk_anim
+		),
+
+		if(should_potter and (not should_turn),
+			start_pottering
+		),
+
+		if(should_turn,
+			turn_around,
+		),
+
+	]",
+
+	end_anim_decisions: "commands :: [
+		if(_is_walking,
+			change_to_walk_anim,
+			change_to_stand_anim
+		)
+	]",
+
+	change_to_walk_anim: "set(animation,
+		if(_current_special_walk_anim != '',
+			_current_special_walk_anim,
+			'walk'
+		)
+	)",
+
+
+
+#-------------------------- behavior --------------------------#
+	start_standing: "commands :: [
+		set(_is_walking, false),
+	]",
+
+
 	start_pottering: "[
-		if(1d2,
+		if(1d2 = 1,
 			start_standing,
-			turn_around
+			start_walking
 		),
 		if(level.cycle - _last_started_pottering > potter_timeout,
 			set(_last_started_pottering,level.cycle)
 		)
 	]",
-		
-	do_regular_behavior: "if(start_mode = 'stand', start_standing, start_walking)",
-	core_anims: "[string] :: ['stand','turn','walk']",
-
-	start_standing: "commands :: [
-		set(_is_walking, false),
-		start_standing__standing_npc_behavior
-	]",
 
 
 	start_walking: "commands :: [
 		set(_is_walking, true),
-		if(should_turn,
-			if(should_potter,
-				start_pottering,
-				turn_around
-			),
-			if(should_potter,
-				start_pottering,
-				if(_current_special_walk_anim != '',
-					animation(_current_special_walk_anim),
-					animation('walk')
-				)
-			)
-		)
 	]",
 	
-	should_turn: "bool ::	if(level.cycle - _last_turned > 10,
-								if(not _target,
-									/*
-										If we don't have a target, then we've got some pretty tame/normal turning behavior. Basically we just look at a pair of bounding limits for where we're allowed to walk, and if we're outside of those, then we need to turn around and go back.  We make a similar caveat for cliffs, treating them like limits.
-										
-										If we're inside those limits, we need to revert to the logic of the standing NPC.
-									*/
-									if(turns_at_cliff and (not is_there_flat_ground_ahead_of_us(cliff_margin)),
-										true,
-										if(is_outside_limits,
-											true,
-											should_turn__standing_npc_behavior
-										)
-									)
-										where margin = 50
-										where cliff_margin = 110,
+
+	/*
+		Remember that this is NOT `can_turn`; this shouldn't contain hard-limits on whether we're even -allowed- to turn, such as checking for animation availability, or timeouts, etc.  This is merely a behavioral expression of whether our character 'wants to' turn; `can_turn` gets checked inside of `turn_around` and will do any and all of the necessary safety checks for us.
+	*/
+	should_turn: "bool ::
+		if(_is_walking,
+			if(not _target,
+				/*
+					If we don't have a target, then we've got some pretty tame/normal turning behavior. Basically we just look at a pair of bounding limits for where we're allowed to walk, and if we're outside of those, then we need to turn around and go back.  We make a similar caveat for cliffs, treating them like limits.
+				*/
+				if(turns_at_cliff and (not is_there_flat_ground_ahead_of_us(cliff_margin)),
+					true,
+					if(is_outside_limits,
+						true,
+						
+						/*
+							Normally we never turn in this case, we just keep walking/standing but there's case where we do — if we're 'pottering', we may decide to randomly turn, here. 
+						*/
+						if(potters = 'limits' or potters = 'always',
+							should_potter,
+							false
+						)
+					)
+				)
+					where margin = 50
+					where cliff_margin = 110,
 
 
-									/* 
-										if we DO have a target, then all the above rules are off; go ahead and walk off cliffs, or leave our bounds, the target is more important.
-									*/
-									if((_target < self.mid_x and facing > 0) or (_target > self.mid_x and facing <= 0),
-										true,
-										false
-									)
-								),
-								false
-							)",
+				/* 
+					if we DO have a target, then all the above rules are off; go ahead and walk off cliffs, or leave our bounds, the target is more important.
+				*/
+				if((_target < self.mid_x and facing > 0) or (_target > self.mid_x and facing <= 0),
+					true,
+					false
+				)
+			),
+
+
+
+
+			/*
+				If we're just completely standing still, defer to the standing behavior in its entirety.
+			*/
+			should_turn__standing_npc_behavior
+		)",
 							
 	should_potter: "bool :: if(_target,
 								false,  /*if we have a target, don't potter at all*/
-								if(level.cycle - _last_started_pottering < potter_timeout, 
-									true,
+								if((level.cycle - _last_started_pottering) < potter_timeout, 
+									false,
 									if(1d2-1 = 1,
 										false,
 										if(potters = 'always',
@@ -152,38 +222,13 @@ properties: {
 	
 	is_at_target: "bool :: if(_target and ((_target < self.mid_x+10 and facing > 0) or (_target >= self.mid_x-10 and facing <= 0)), true, false)",
 	
-	walking_animations: "[string] :: ['walk']", //a list of walking animations - inheritors may supply more than this
-	
-	check_for_special_walk_anim: "if(animation in walking_animations and animation != 'walk', set(_current_special_walk_anim, animation), set(_current_special_walk_anim, ''))",
 },
 	
 
-on_create: "[
-	if(start_mode = 'stand',
-		set(_is_walking, false),
-		set(_is_walking, true)
-	)
-	;
-	do_regular_behavior,
-	fire_event('enter_level'),
-] asserting max_x > min_x",
 					
-on_resume: "do_regular_behavior",
+on_resume: "initialize_regular_behavior",
 
-on_process: "if(animation in walking_animations, 
-				[
-					check_for_special_walk_anim,
-					if(should_turn,
-						/*
-							rather than directly triggering the 'turn' behavior, trigger the global behavior switchboard (i.e. 'start_walking') because we might want to 'potter' instead of turning.
-						*/
-						start_walking,	
-						if(self.is_at_target,
-							fire_event(self,'reach_target') 
-						)
-					)
-				]
-			)",
+on_process: "core_processing",
 
 
 //note - it's REALLY important that target_callback be last - if this gets fired during a dialogue, the other commands after target_callback don't get executed until the dialogue is finished (which essentially breaks target-seeking entirely)	
