Fixed the turn logic to treat NPCs that potter as a special case, such that they won't default to turning towards the player if they're pottering.

--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -50,7 +50,7 @@ properties: {
 	do_resume: "commands :: [fire_event('resume'), set(_paused,false)]",
 
 #-------------------------- core functionality --------------------------#
-	start_standing: "commands :: null",  //we are always in standing mode
+	start_standing: "commands :: null",  //this is virtual, because we are always in standing mode within this prototype.  It's meaningful for heirs of this prototype.
 
 
 	do_stand_or_turn_behavior: "if(should_turn,
@@ -58,7 +58,10 @@ properties: {
 		change_to_stand_anim,
 	)",
 	
-	change_to_stand_anim: "if(animation in standing_animations, set(animation,animation), animation('stand'))",
+	change_to_stand_anim: "if(animation in standing_animations,
+		set(animation,animation),
+		animation('stand')
+	)",
 	
 
 
@@ -80,7 +83,11 @@ properties: {
 
 
 	turn_around: "commands :: if(can_turn,
-		[if('turn' in available_animations, animation('turn')), set(facing, -facing), set(_last_turned, level.cycle)],
+		[
+			if('turn' in available_animations, animation('turn')),
+			set(facing, -facing),
+			set(_last_turned, level.cycle),
+		],
 		change_to_stand_anim
 	)",
 
@@ -131,7 +138,7 @@ properties: {
 on_end_anim: "if(not animation in core_anims,
 	animation(animation),
 	if(_paused,
-		start_standing,
+		change_to_stand_anim,
 		//if(animation not in ['turn'] and time_in_animation >= animation_obj.total_animation_time,
 			end_anim_decisions
 		//)
