--- a/data/object_prototypes/general/walking_npc.cfg
+++ b/data/object_prototypes/general/walking_npc.cfg
@@ -191,10 +191,19 @@ properties: {
 
 
 			/*
-				If we're just completely standing still, defer to the standing behavior in its entirety.
+				If we're just completely standing still, we broadly want to defer to the standing behavior in its entirety, with one exception.
+
+				First, if we're talking to someone, defer to the standard standing behavior, because that has the correct stuff for facing the person being talked to.
+				If we're not talking to someone though, and we potter, we'll typically want to ignore the normal facing contraints and walk around and do our own thing.
 			*/
-			should_turn__standing_npc_behavior
-		)",
+			if(frogatto.currently_speaking_to != null,
+				should_turn__standing_npc_behavior,
+				if(potters = 'limits' or potters = 'always',
+					should_potter,
+					should_turn__standing_npc_behavior
+				)
+			)
+		) where frogatto = (obj frogatto_playable <- level.player)",
 							
 	should_potter: "bool :: if(_target,
 								false,  /*if we have a target, don't potter at all*/
