Fixed the special walk animation behavior for the butler npc.  Cleaned up a little tea-with-milgram markup.

--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -44,6 +44,8 @@ properties: {
 	standing_animations: "[string] :: ['stand']", //a list of walking animations - inheritors may supply more than this
 
 
+#-------------------------- animation sets --------------------------#
+	_current_special_stand_anim: { type: "string", default: '' },	
 
 #-------------------------- cutscene commands --------------------------#
 	do_pause: "commands :: [change_to_stand_anim, set(_paused,true)]",
@@ -58,12 +60,13 @@ properties: {
 		change_to_stand_anim,
 	)",
 	
-	change_to_stand_anim: "if(animation in standing_animations,
-		set(animation,animation),
-		animation('stand')
-	)",
 	
-
+	change_to_stand_anim: "set(animation,
+		if(_current_special_stand_anim != '',
+			_current_special_stand_anim,
+			'stand'
+		)
+	)",
 
 
 
