--- a/data/object_prototypes/general/walking_npc.cfg
+++ b/data/object_prototypes/general/walking_npc.cfg
@@ -85,7 +85,6 @@ properties: {
 	core_anims: "[string] :: ['stand','turn','walk']",
 	walking_animations: "[string] :: ['walk']", 
 	
-	check_for_special_walk_anim: "if(animation in walking_animations and animation != 'walk', set(_current_special_walk_anim, animation), set(_current_special_walk_anim, ''))",
 
 
 
@@ -98,10 +97,6 @@ properties: {
 		if(self.is_at_target,
 			fire_event(self,'reach_target') 
 		),	
-
-		if(animation in walking_animations,
-			check_for_special_walk_anim
-		),
 
 		if(should_potter and (not should_turn),
 			start_pottering
@@ -229,7 +224,7 @@ properties: {
 				) where img_margin = img_w/2",
 	
 	
-	is_at_target: "bool :: if(_target and ((_target < self.mid_x+10 and facing > 0) or (_target >= self.mid_x-10 and facing <= 0)), true, false)",
+	is_at_target: "bool :: if(_target and abs(_target - me.mid_x) < 20, true, false)",
 	
 },
 	
@@ -241,6 +236,13 @@ on_process: "core_processing",
 
 
 //note - it's REALLY important that target_callback be last - if this gets fired during a dialogue, the other commands after target_callback don't get executed until the dialogue is finished (which essentially breaks target-seeking entirely)	
-on_reach_target: "[[set(start_mode, 'stand'),start_standing], set(_target,null), set(_target_callback, null), if(_target_callback != null, _target_callback() )]",
+on_reach_target: "[
+	set(start_mode, 'stand'),
+	start_standing,
+	change_to_stand_anim,
+	set(_target,null),
+	set(_target_callback, null),
+	if(_target_callback != null, _target_callback() ),
+]",
 
 }
