--- a/data/level/Dungeon/tea-with-milgram.cfg
+++ b/data/level/Dungeon/tea-with-milgram.cfg
@@ -358,16 +358,31 @@
 				me, [~Yes, I do think everyone will have\\nan equitable outcome to this whole mess.~],
 					set(me.animation, 'emote_laugh'),
 					[~Except the elder.~],
-					   set(level.player.control_lock, null),
-	fire_event(self, 'gameOver')
-						)",
-			"on_gameOver": "[set(level.player.control_lock, []),
-	              screen_flash([0,0,0,0],[0,0,0,5], 50),
-				  title(~The End~,600),
-	              schedule(50, [screen_flash([0,0,0,255], 700), schedule(600, [spawn_player('frogatto_playable', 0, 0, 1, move_to_standing()), teleport('titlescreen.cfg', '', 'instant'), set(level.player.control_lock, null)])])]",
-			"on_jeeves_1_walk_out": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_loaded_to(get_object_or_die(level,'target1').mid_x,  def() -> commands [fire_event(get_object_or_die(level,'milgram'),'createSpeechPart2')])",
-			"on_jeeves_2_walk_back": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_to(900,  def() -> commands [fire_event(get_object_or_die(level,'milgram'),'createSpeechPart3')])",
-			"on_jeeves_3_walk_out": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_loaded_to(get_object_or_die(level,'target2').mid_x,  def() -> commands [fire_event(get_object_or_die(level,'milgram'),'createSpeechPart4')])",
+
+					set(level.player.control_lock, null),
+					fire_event(self, 'gameOver')
+				)",
+			"on_gameOver": "[
+				set(level.player.control_lock, []),
+				screen_flash([0,0,0,0],[0,0,0,5], 50),
+				title(~The End~,600),
+				schedule(50, [
+					screen_flash([0,0,0,255], 700),
+					schedule(600, [
+						spawn_player('frogatto_playable', 0, 0, 1, move_to_standing()), teleport('titlescreen.cfg', '', 'instant'),
+						set(level.player.control_lock, null)
+					])
+				])
+			]",
+			"on_jeeves_1_walk_out": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_loaded_to(get_object_or_die(level,'target1').mid_x,  def() -> commands [
+				fire_event(get_object_or_die(level,'milgram'),'createSpeechPart2')
+			])",
+			"on_jeeves_2_walk_back": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_to(900,  def() -> commands [
+				fire_event(get_object_or_die(level,'milgram'),'createSpeechPart3')
+			])",
+			"on_jeeves_3_walk_out": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_loaded_to(get_object_or_die(level,'target2').mid_x,  def() -> commands [
+				fire_event(get_object_or_die(level,'milgram'),'createSpeechPart4')
+			])",
 			"on_jeeves_4_walk_back": "(obj kitty_butler_npc <- get_object_or_die(level,'jeeves')).walk_to(900)",
 			"time_in_frame": 0,
 			"type": "milgram_npc",
