Updated the special walk animation logic for the other NPC types that use it to match the pattern established in the kitty-butler.

--- a/data/objects/props-interactive/npcs/kitty_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_npc.cfg
@@ -19,9 +19,11 @@ on_shake_right: "lib.sound.play_sound(me, 'kitty-head-shake-right')",
 properties: {
 	standing_animations: "['stand', 'stand_sleeping', 'stand_read_book']",
 	walking_animations: "['walk', 'walk_quickly']",
+
 	"walk_quickly_to": "def(int target_x, null|function()->commands callback=null) -> commands execute(me, [
-		self.walk_to(target_x, callback),
-		set(self.animation, 'walk_quickly'),
+		set(_current_special_walk_anim, 'walk_quickly'),
+		;
+		walk_to(target_x, callback),
 	])",
 
 },
