--- a/data/objects/props-interactive/npcs/kitty_spear_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_spear_npc.cfg
@@ -7,10 +7,13 @@ solid_dimensions: [],
 
 properties: {
 	walking_animations: "['walk', 'dash']",
-	"dash_to": "def(int target_x, null|function()->commands callback=null) -> commands [
-		self.walk_to(target_x, callback),
-		set(self.animation, 'dash'),
-		]",
+
+	"dash_to": "def(int target_x, null|function()->commands callback=null) -> commands execute(me, [
+		set(_current_special_walk_anim, 'dash'),
+		;
+		walk_to(target_x, callback),
+	])",
+
 
 #-------------------------- vars --------------------------#
 	_posthurt_counter: { type: "int", default: 3, persistent: false },	
