--- a/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
@@ -7,10 +7,12 @@ solid_dimensions: [],
 properties: {
 	walking_animations: "['walk', 'walkSad']",
 
-	"walk_sadly_to": "def(int target_x, null|function()->commands callback=null) -> commands [
-		self.walk_to(target_x, callback),
-		set(self.animation, 'walkSad'),
-		]",
+	"walk_sadly_to": "def(int target_x, null|function()->commands callback=null) -> commands execute(me, [
+		set(_current_special_walk_anim, 'walkSad'),
+		;
+		walk_to(target_x, callback),
+	])",
+
 #-------------------------- vars --------------------------#
 	_animation_counter: { type: "int", default: 3, persistent: false },	
 	turning_behaviour: { default: "never" },
