--- a/data/object_prototypes/enemies_general_types/rabbit.cfg
+++ b/data/object_prototypes/enemies_general_types/rabbit.cfg
@@ -42,7 +42,7 @@ on_end_anim: "switch(animation,
 							proto_event('ant','end_anim')
 			)",
 
-on_process_jump:  "if(velocity_y > 0, set(animation,'fall'))",			
+on_process_jump:  "if(dump(velocity_y) > -.5, set(animation,'fall'))",			
 on_collide_feet: "[animation('land'),proto_event('movable_enemy','collide_feet')]",			
 
 }
