An obj player_controlled other than Frogatto can now be on the titlescreen.

--- a/data/level/General/titlescreen.cfg
+++ b/data/level/General/titlescreen.cfg
@@ -83,7 +83,7 @@
 									add_object(stored_player), teleport('frogatto-grotto-frogattos-room.cfg','','instant'),sound('MenuConfirm.ogg'),
 									set(control_lock, null),
 								])
-							) asserting stored_player is obj frogatto_playable,
+							) asserting stored_player is obj player_controlled,
 					 	])
 					)),
 					set(child.event_handlers['mouse_down*'], q( //Work around the play not being clickable due to a bug. Override menu_selector's on_mouse_down*.
@@ -213,9 +213,9 @@
 			"label": "Reset Inter-Playthrough Values",
 			"on_create": "//these are assumed to be values we'll get correctly populated by loading a save, but if the player comes back to the titlescreen directly and wants to start a new game, we want these to be null 
 				[
-					set(frogatto.starting_systemclock_time_of_entire_playthrough, null),
-					frogatto.initialize_death_tracking_storage,
-				] where frogatto = (obj frogatto_playable <- level.player)",
+					set(level.player.starting_systemclock_time_of_entire_playthrough, null),
+					if(level.player is obj frogatto_playable, level.player.initialize_death_tracking_storage),
+				]",
 			"on_triggered": "swallow_event()",
 			"property_data": {
 				"_x2_bound": 182,
