--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -635,6 +635,8 @@ properties: {
 ///							// 'grudge' - check if the last 10 objects killed were all the same type
 //						if(size(enemy_types) > 9, if(not find(enemy_types[size(enemy_types)-10, size(enemy_types)], value != enemy_types[size(enemy_types)])  , achievement('grudge'))) where enemy_types = keys(recorded_kills),
 //					]",
+	
+	starting_systemclock_time_of_entire_playthrough: { type: "int|null", default: null },
 
 #-------------------------- vars --------------------------#
 	control_lock_registry: { type: "[{lock_contents: [string], name: string}]", default: [] },
