Fixed the kitty spear being unable to do walk commands.

--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -125,6 +125,7 @@ properties: {
 									(find_wall(level.player.mid_x, level.player.mid_y, standard_conversation_distance + 20, direction) = null)
 							",
 
+	end_anim_decisions_for_custom_anims: "commands :: animation(animation)",
 
 #-------------------------- storage --------------------------#
 		//a formula that can be used to draw the character's attention to an object, and make them do whatever in response to it.
@@ -136,10 +137,9 @@ properties: {
 	_last_interacted: { type: "int", default: -100, persistent: false },
 },
 
-
 			/*if we're doing some special animation, like the butler-kitty, we're expected to self-handle termination*/
 on_end_anim: "if(not animation in core_anims,
-	animation(animation),
+	end_anim_decisions_for_custom_anims,
 	if(_paused,
 		change_to_stand_anim,
 		//if(animation not in ['turn'] and time_in_animation >= animation_obj.total_animation_time,
