--- a/data/objects/props-interactive/npcs/kitty_spear_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_spear_npc.cfg
@@ -15,6 +15,11 @@ properties: {
 	])",
 
 
+
+	end_anim_decisions_for_custom_anims: "if(animation != 'posthurt',
+		animation(animation)
+	)",
+
 #-------------------------- vars --------------------------#
 	_posthurt_counter: { type: "int", default: 3, persistent: false },	
 },
@@ -23,7 +28,6 @@ on_create: "[proto_event('standing_npc','create'),proto_event('walking_npc','cre
 
 
 on_end_posthurt_anim: "if(_posthurt_counter > 0,[set(_posthurt_counter, _posthurt_counter - 1),animation('posthurt')],animation('stand'))",
-on_end_anim: "if(not animation in ['posthurt','walk','dash'],animation('stand'))",
 on_angryface: "[set(_posthurt_counter, 3),animation('posthurt')]",
 
 
