Fixed the kitty spear npcs not having pre-established standing behavior.

--- a/data/level/Dungeon/milgrams-throne-room.cfg
+++ b/data/level/Dungeon/milgrams-throne-room.cfg
@@ -176,7 +176,8 @@
 					where milgram = (obj milgram_npc <- get_object_or_die(level, 'milgram'))",
 			"property_data": {
 				"max_x": 615,
-				"min_x": 415
+				"min_x": 415,
+				"start_mode": "stand",
 			},
 			"type": "kitty_spear_npc",
 			"x": 466,
