--- a/data/level/Seaside/crevice-village-cave.cfg
+++ b/data/level/Seaside/crevice-village-cave.cfg
@@ -52,6 +52,9 @@
 			"velocity_y": 0,
 			"x": 1568,
 			"y": 573,
+			"property_data": {
+				"start_mode": "stand",
+			},
 			
 			"on_interrogate_player": "[
 			set(level.zoom, 2),
