--- a/data/objects/props-interactive/npcs/kitty_spear_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_spear_npc.cfg
@@ -15,8 +15,9 @@ properties: {
 	])",
 
 
-
-	end_anim_decisions_for_custom_anims: "if(animation != 'posthurt',
+	// we only need to do this for special animations triggered when we're not 'paused', as we are during a normal conversation 
+	end_anim_decisions_for_custom_anims: "if(animation in ['posthurt', 'alert'],
+		end_anim_decisions,
 		animation(animation)
 	)",
 
