Some fixups for the sword kitty.

--- a/data/level/Seaside/crevice-village-house-elder.cfg
+++ b/data/level/Seaside/crevice-village-house-elder.cfg
@@ -229,7 +229,7 @@
 					schedule(1,fire_event('postdeath_dialogue_3'))
 			)) ]",
 			"on_postdeath_dialogue_3": "[
-				if(is_standing_on_platform,set(me.fall_through_platforms, 100)),
+				set(me.fall_through_platforms, 10000),
 				
 				walk_sadly_to(780, def() -> commands [schedule(20,
 						[fire_event(get_object_or_die(level,'lower_door'),'open'),
