--- a/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
@@ -13,6 +13,18 @@ properties: {
 		walk_to(target_x, callback),
 	])",
 
+	end_anim_decisions_for_custom_anims: "if(animation in ['posthurt', 'alert'],
+		end_anim_decisions,
+		[
+			if(animation in ['brandish','jump_attack','lunge_attack','extend_sword','stand'],
+				animation('stand')
+			),
+			if(animation in ['lowerBroken','lowerBrokenSniffle'],
+				animation('lowerBrokenSniffle')
+			),
+		]
+	)",
+
 #-------------------------- vars --------------------------#
 	_animation_counter: { type: "int", default: 3, persistent: false },	
 	turning_behaviour: { default: "never" },
@@ -28,10 +40,6 @@ on_end_walkSad_anim: "animation('walkSad')",
 
 
 #-------------------------- basic animation changes --------------------------#
-on_end_anim: "[	if(animation in ['brandish','jump_attack','lunge_attack','extend_sword','stand'], animation('stand')),
-				if(animation in ['lowerBroken','lowerBrokenSniffle'], animation('lowerBrokenSniffle')) ,
-				proto_event('walking_npc', 'end_anim')]",
-
 on_end_charge_brandish_anim: "animation('brandish')",
 on_process_jump: "if(is_standing, animation('stand'))",
 
