--- a/data/objects/props-interactive/npcs/kitty_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_npc.cfg
@@ -40,7 +40,17 @@ on_end_emote_nod_anim:				"set(animation, 'stand')",
 on_end_stand_sleeping_anim:			"set(animation, 'stand_sleeping')",
 on_end_stand_read_book_anim:		"set(animation, 'stand_read_book')",
 on_end_emote_restore_book_anim:		"set(animation, 'stand_read_book')",
-on_end_emote_stow_book_anim:		"set(animation, 'stand')",
+on_end_emote_stow_book_anim:		"[set(animation, 'stand'),set(_current_special_stand_anim, '')]",
+
+
+on_read_book: "[
+	set(animation, 'stand_read_book'),
+	set(_current_special_stand_anim, 'stand_read_book'),
+]",
+on_restore_book: "[
+	set(animation, 'emote_restore_book'),
+	set(_current_special_stand_anim, 'stand_read_book'),
+]",
 
 
 animation: [
