Fixed a really weird behavior leak where the pottering behavior for turning would leak into conversations when a character is supposed to exclusively face the player.

--- a/data/level/Dungeon/kitty-dormitory.cfg
+++ b/data/level/Dungeon/kitty-dormitory.cfg
@@ -2031,7 +2031,7 @@
 			"property_data": {
 				"max_x": -3090,
 				"min_x": -3374,
-				"potters": "limits"
+				"potters": "always"
 			},
 			"type": "kitty_npc",
 			"x": -3328,
@@ -2161,7 +2161,7 @@
 			"property_data": {
 				"max_x": -135,
 				"min_x": -271,
-				"potters": "limits"
+				"potters": "always"
 			},
 			"type": "kitty_npc",
 			"x": -160,
@@ -2252,7 +2252,7 @@
 			"property_data": {
 				"max_x": -4128,
 				"min_x": -4674,
-				"potters": "limits"
+				"potters": "always"
 			},
 			"type": "kitty_npc",
 			"x": -4512,
