--- a/data/object_prototypes/general/walking_npc.cfg
+++ b/data/object_prototypes/general/walking_npc.cfg
@@ -98,7 +98,7 @@ properties: {
 			fire_event(self,'reach_target') 
 		),	
 
-		if(should_potter and (not should_turn),
+		if(should_potter and (not is_outside_limits),
 			start_pottering
 		),
 
@@ -200,11 +200,11 @@ properties: {
 			)
 		) where frogatto = (obj frogatto_playable <- level.player)",
 							
-	should_potter: "bool :: if(_target,
-								false,  /*if we have a target, don't potter at all*/
+	should_potter: "bool :: if(_target or (frogatto.currently_speaking_to != null),
+								false,  /*if we have a target, don't potter at all.  Same with conversing with someone.*/
 								if((level.cycle - _last_started_pottering) < potter_timeout, 
 									false,
-									if(1d2-1 = 1,
+									if(1d2 = 2,
 										false,
 										if(potters = 'always',
 											true,
@@ -215,7 +215,7 @@ properties: {
 										)
 									)
 								)
-							)",
+							) where frogatto = (obj frogatto_playable <- level.player)",
 	
 	is_outside_limits: "bool :: 
 				if(facing > 0,
