Partial overhaul of the flying_npc stuff to fix animation switching.

--- a/data/object_prototypes/general/flying_npc.cfg
+++ b/data/object_prototypes/general/flying_npc.cfg
@@ -42,19 +42,63 @@ properties: {
 						if('takeoff' in available_animations and animation not in flight_animations, animation('takeoff'), animation('fly')))",
 	
 							
-	cycles_we_have_been_waiting_to_turn: { type: "int", default: 0 },
-	clear_turning_delay: "set(cycles_we_have_been_waiting_to_turn, 0)",
-	
-	turn_around: "if(cycles_we_have_been_waiting_to_turn < 25,
-					[add(cycles_we_have_been_waiting_to_turn, 1)],			
-					[if(is_standing, animation('turn'), animation('turn_fly')), set(facing, -facing), set(_last_turned, level.cycle), clear_turning_delay]
-				)",
-	
-	
+
 	flight_animations: "[string] :: ['fly', 'turn_fly','takeoff']", //a list of flying animations - inheritors may supply more than this
 	
 	check_for_special_fly_anim: "if(animation in flight_animations and animation not in ['fly', 'turn_fly','takeoff'], set(_current_special_flight_anim, animation), set(_current_special_flight_anim, ''))",
-	
+
+
+
+	change_to_fly_anim: "set(animation,
+		if(_current_special_flight_anim != '',
+			_current_special_flight_anim,
+			'fly'
+		)
+	)",
+
+
+#-------------------------- core behavior --------------------------#
+	core_processing: "commands :: [
+		if(animation in flight_animations, 
+			[process_fly, check_for_special_fly_anim]
+		),
+
+		if(should_turn,
+			turn_around,
+		),
+
+	]",
+
+
+	end_anim_decisions: "commands :: [
+		if(is_standing,
+			change_to_stand_anim,
+			change_to_fly_anim
+		)
+	]",
+
+
+#-------------------------- turning-behaviour --------------------------#
+	turn_around: "commands :: if(can_turn,
+		[
+			if(is_standing,
+				if('turn' in available_animations, animation('turn')),
+				if('turn_fly' in available_animations, animation('turn_fly'))
+			),
+			set(facing, -facing),
+			set(_last_turned, level.cycle),
+		],
+		end_anim_decisions
+	)",
+
+	should_turn: "bool :: if(is_standing,
+		should_turn__standing_npc_behavior,
+		should_turn_during_flight
+	)",
+
+	should_turn_during_flight: "bool :: ((_current_target = null) or (sign(mid_x - _current_target.x) = facing)) and
+										animation not in ['turn_fly']",
+
 #-------------------------- target-seeking --------------------------#
 	target_acquisition_bounds: "decimal :: if(is_at_last_node, 50, 200)",
 
@@ -79,13 +123,13 @@ properties: {
 						y: sin(angle) * flight_speed
 					} where angle = lib.math.angle(me,[_current_target.x, _current_target.y]),
 					{x:0,y:0})",
-	
-	should_turn_during_flight: "bool :: ((_current_target = null) or (sign(mid_x - _current_target.x) = facing)) and
-										animation not in ['turn_fly'] and
-										(level.cycle - _last_turned > 10)",
+
 
 	process_fly: "if(_current_target != null, if(not is_at_target, 
-						[add(velocity_x, flight_vel.x), add(velocity_y, flight_vel.y), if(should_turn_during_flight, turn_around, clear_turning_delay)],
+						[
+							add(velocity_x, flight_vel.x),
+							add(velocity_y, flight_vel.y),
+						],
 						check_next_node
 					))",
 					
@@ -104,14 +148,18 @@ on_create: "do_regular_behavior",
 					
 on_resume: "do_regular_behavior",
 
-on_process: "[
-				if(animation in flight_animations, 
-					[process_fly, check_for_special_fly_anim]
-				)
-			]",
+on_process: "core_processing",
 
 
 //note - it's REALLY important that target_callback be last - if this gets fired during a dialogue, the other commands after target_callback don't get executed until the dialogue is finished (which essentially breaks target-seeking entirely)	
-on_reach_target: "[if(_stand_at_destination, begin_landing, begin_flying), set(_current_target,null), set(_target_callback, null), if(_target_callback != null, _target_callback())]",
+on_reach_target: "[
+	if(_stand_at_destination,
+		begin_landing,
+		begin_flying
+	),
+	set(_current_target,null),
+	set(_target_callback, null),
+	if(_target_callback != null, _target_callback())
+]",
 
 }
