--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -57,7 +57,7 @@ properties: {
 
 	do_stand_or_turn_behavior: "if(should_turn,
 		turn_around,
-		change_to_stand_anim,
+		change_to_stand_anim
 	)",
 	
 	
