--- a/data/objects/props-interactive/npcs/berd_npc.cfg
+++ b/data/objects/props-interactive/npcs/berd_npc.cfg
@@ -4,11 +4,14 @@ prototype: ["flying_npc"],
 solid_dimensions: ["npc"],
 solid_area: [9,10,29,32],
 
-#make it so if he is flying and becomes inactive and then active again, he will disappear.
-#TODO:  this has been disabled because it kills him in cutscenes that have broader scope than when I wrote it.
-#I need to step through all cutscenes and make sure they use something to deal with this (on_outside_level could be good)
-//on_become_active: "if(animation != 'stand' and cycle > 200, die())",
-on_create: "",
+
+
+properties: {
+	flight_animations: "[string] :: ['fly', 'turn_fly','takeoff', 'freefall']",
+},
+
+
+//on_create: "",
 on_flapsound: "sound_falloff('wing-flap-big'+1d6+'.wav')",
 on_armraise: "sound_falloff('feather-lift.wav')",
 on_armdrop: "sound_falloff('feather-drop.wav')",
@@ -19,8 +22,6 @@ on_collide_feet: "[if(animation = 'freefall',
 					),set(velocity_x,0),fire_event('landed')]",
 
 on_flap: "if(velocity_y > -800,add(velocity_y,-400))",
-on_end_fly_up_anim: "animation('fly_up')",
-on_end_fly_down_anim: "animation('fly_down')",
 on_end_perch_anim: "animation('perch')",
 on_end_perched_flap_anim: "animation('perched_flap')",
 
@@ -34,8 +35,6 @@ on_end_freefall_anim: "animation('freefall')",
 on_end_faceplant_anim: "animation('prostrate')",
 on_end_prostrate_anim: "animation('prostrate')",
 on_end_stand_back_up_anim: "animation('stand')",
-
-
 
 animation: [
 	{
