Fixed a bunch of scripting stuff with berd.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -85,7 +85,8 @@
 							set(me.velocity_y, 600),
 							set(me.velocity_x, 500),
 							schedule(1,	[
-								set(me.animation, 'freefall'),
+								set(me._current_special_flight_anim, 'freefall'),
+								set(me._is_flying, true),
 								set(level.player.mid_xy, [123,-1157]),
 								set(level.player.animation, 'freefall'),
 								set(level.player.velocity_y, 600),
