--- a/data/object_prototypes/general/flying_npc.cfg
+++ b/data/object_prototypes/general/flying_npc.cfg
@@ -1,9 +1,4 @@
 {
-/*Implementor requires "fly", "turn", "turn_fly" animations.
-Commands:	
-			begin_flying - takes off and hovers in place
-			cease_flying - lands, and enters a standing mode
-*/
 id: "flying_npc",
 prototype: ["standing_npc"],
 always_active: true,
@@ -17,6 +12,18 @@ editor_info: {
 },
 
 properties: {
+#-------------------------- constructor/destructor logic --------------------------#
+	epi_standing_npc_constructor: "commands :: [
+		if(start_mode = 'stand',
+			set(_is_flying, false),
+			set(_is_flying, true)
+		)
+		;
+		initialize_regular_behavior,
+		fire_event('enter_level'),
+	]",
+
+
 #-------------------------- editor items --------------------------#
 	start_mode: { type: "string", default: "stand", editor_info: { type: "enum", enum_values: ["stand","fly"] } },
 
@@ -27,40 +34,30 @@ properties: {
 	_current_special_flight_anim: { type: "string", default: '' },	
 
 	_targets: { type: "[{x:int, y:int}]", default: []},  
+	_is_flying: { type: "bool", default: true },
 #-------------------------- behavior --------------------------#
-	begin_flying: "[
-		set(start_mode,'fly'),
-		set(_current_target, null)]",
-		
-	begin_landing: "[set(start_mode, 'stand'),start_standing]",  //NB: start_standing's the standing_npc code which we don't want to overwrite here; just call or omit
-
-		
-	do_regular_behavior: "if(start_mode = 'stand', start_standing, start_flying)",
 	core_anims: "[string] :: ['stand','turn','fly','turn_fly','takeoff']",
-	
-	start_flying: "if(_current_special_flight_anim != '', animation(_current_special_flight_anim), 
-						if('takeoff' in available_animations and animation not in flight_animations, animation('takeoff'), animation('fly')))",
-	
-							
-
 	flight_animations: "[string] :: ['fly', 'turn_fly','takeoff']", //a list of flying animations - inheritors may supply more than this
 	
-	check_for_special_fly_anim: "if(animation in flight_animations and animation not in ['fly', 'turn_fly','takeoff'], set(_current_special_flight_anim, animation), set(_current_special_flight_anim, ''))",
-
-
+	do_regular_behavior: "if(start_mode = 'stand', start_standing, start_flying)",
 
 	change_to_fly_anim: "set(animation,
-		if(_current_special_flight_anim != '',
-			_current_special_flight_anim,
-			'fly'
+		if('takeoff' in available_animations and animation not in flight_animations,
+			'takeoff',
+			if(_current_special_flight_anim != '',
+				_current_special_flight_anim,
+				'fly'
+			)
 		)
 	)",
 
 
 #-------------------------- core behavior --------------------------#
+	initialize_regular_behavior: "if(start_mode = 'stand', start_standing, start_flying)",
+
 	core_processing: "commands :: [
 		if(animation in flight_animations, 
-			[process_fly, check_for_special_fly_anim]
+			process_fly
 		),
 
 		if(should_turn,
@@ -71,19 +68,28 @@ properties: {
 
 
 	end_anim_decisions: "commands :: [
-		if(is_standing,
-			change_to_stand_anim,
-			change_to_fly_anim
+		if(_is_flying,
+			change_to_fly_anim,
+			change_to_stand_anim
 		)
+	]",
+
+
+	start_standing: "commands :: [
+		set(_is_flying, false),
+	]",
+
+	start_flying: "[
+		set(_is_flying, true),
 	]",
 
 
 #-------------------------- turning-behaviour --------------------------#
 	turn_around: "commands :: if(can_turn,
 		[
-			if(is_standing,
-				if('turn' in available_animations, animation('turn')),
-				if('turn_fly' in available_animations, animation('turn_fly'))
+			if(_is_flying,
+				if('turn_fly' in available_animations, animation('turn_fly')),
+				if('turn' in available_animations, animation('turn'))
 			),
 			set(facing, -facing),
 			set(_last_turned, level.cycle),
@@ -91,9 +97,9 @@ properties: {
 		end_anim_decisions
 	)",
 
-	should_turn: "bool :: if(is_standing,
-		should_turn__standing_npc_behavior,
-		should_turn_during_flight
+	should_turn: "bool :: if(_is_flying,
+		should_turn_during_flight,
+		should_turn__standing_npc_behavior
 	)",
 
 	should_turn_during_flight: "bool :: ((_current_target = null) or (sign(mid_x - _current_target.x) = facing)) and
@@ -110,8 +116,8 @@ properties: {
 		set(_current_target, targets[0]),
 		set(_stand_at_destination, stand_at_dest),
 		if(callback != null, set(_target_callback, callback)),
-		set(start_mode, 'fly')
-		]) asserting size(targets) > 0",
+		set(_is_flying, true)
+	]) asserting size(targets) > 0",
 
 	dist_to_target: "decimal :: if(_current_target != null, lib.math.length( [_current_target.x,_current_target.y], me), 0)",
 
@@ -154,8 +160,8 @@ on_process: "core_processing",
 //note - it's REALLY important that target_callback be last - if this gets fired during a dialogue, the other commands after target_callback don't get executed until the dialogue is finished (which essentially breaks target-seeking entirely)	
 on_reach_target: "[
 	if(_stand_at_destination,
-		begin_landing,
-		begin_flying
+		start_standing,
+		start_flying
 	),
 	set(_current_target,null),
 	set(_target_callback, null),
